# llm_chatbot

./: Dockerfile.txt  README.md  app.py  app_complete.py  app_functional.py  app_local.py  app_multitask.py  create_download_zip.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py  usage_guide.md
chatgpt_clone/: Dockerfile  main.py
chatgpt_clone/app/: memory.py  rag_engine.py  utils.py
code/: README.md  app_smart.py  create_download_package.py  install.sh  quota_solution.md  replit.txt
report file/: report file week2.docx  report week1.docx
streamlit/: config.toml
utils/: ai_client.py  file_processor.py
